# kviz

./: .gitignore  Cargo.toml  README.md  build-dist.sh  build-ffmpeg.sh  build-release.sh  run-dev.sh
src/: args.rs  ffmpeg.rs  main.rs  project.rs  recycler.rs  util.rs
src/ffmpeg/: decode.rs  encode.rs  extra.rs  logging.rs  mod.rs
src/recycle/: enum.rs  holder.rs  mod.rs  simple.rs
src/visualizer/: bars.rs  cotton.rs  credits.rs  mod.rs
