[package]
name = "kviz"
version = "0.1.0"
edition = "2021"
authors = ["kneelawk <kneelawk@gmail.com>"]
description = "Music visualizer experiments"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
ffmpeg-next = { version = "6.1.1", features = [] }
lazy_static = "1.4.0"
thiserror = "1.0.56"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "sync"] }
vsprintf = "2.0.0"
