[package]
name = "kviz"
version = "0.1.0"
edition = "2021"
authors = ["kneelawk <kneelawk@gmail.com>"]
description = "Music visualizer experiments"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
enum-key = { git = "https://github.com/Kneelawk/enum-key.git", rev = "5cbc81f76c8c6687fee07c8aa273879874e3e340" }
ffmpeg-next = { version = "6.1.1", features = [] }
humantime = "2.1.0"
lazy_static = "1.4.0"
num-complex = "0.4.4"
realfft = "3.3.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
thiserror = "1.0.56"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "sync", "fs", "io-util"] }
vsprintf = "2.0.0"
